Began working on Notes app while waiting for weather API activation. Began creating individual CSS files for the different components.

--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ body {
     text-align: center;
     margin: 20px auto;
     width: 85%;
-    overflow-x: auto; /* Allow horizontal scrolling */
+    overflow-x: auto;
 }
 
 .weather-forecast-item {
