--- a/components/weather.html
+++ b/components/weather.html
@@ -22,30 +22,16 @@
 
                 <div class="today-forecast">
                     <div class="today" id="current-temp">
-                        <img src="/images/Icon.webp" alt="weather-now-icon" id="today-icon">
-                        <div class="temp-now">45&#176 F</div>
+                        <img src="https://openweathermap.org/img/wn/10d@2x.png" alt="weather-now-icon" id="today-icon">
+                        <div class="temp-now" id="temp-now"></div>
                     </div>
                 </div>
 
                 <div class="place-container">
-                    <div class="time-zone" id="time-zone"> <p id="location">City State Country</p></div>
+                    <div class="time-zone" id="time-zone"> <p id="location"></p></div>
                 </div>
 
                 <div class="others" id="current-weather-items">
-                    <div class="weather-items">
-                        <div>High / Low</div>
-                        <div>69 | 45</div>
-                    </div>
-
-                    <div class="weather-items">
-                        <div>Humidity</div>
-                        <div>20%</div>
-                    </div>
-                   
-                    <div class="weather-items">
-                        <div>Windspeed</div>
-                        <div>15 mph</div>
-                    </div>
                 </div>
 
             </div>
@@ -54,59 +40,59 @@
 
         <div class="weather-forecast" id="weather-forecast">
             <div class="weather-forecast-item">
-                <div class="day">Sunday</div>
-                <img src="/images/Icon.webp" alt="weather icon" class="w-icon">
-                <div class="temp">Day - 55&#176 F</div>
-                <div class="temp">Night - 32&#176 F</div>
+                <div class="day"></div>
+                <img src="" alt="weather icon" class="w-icon">
+                <div class="temp">Day - ??#176 F</div>
+                <div class="temp">Night - ??&#176 F</div>
             </div>
 
             <div class="weather-forecast-item">
-                <div class="day">Monday</div>
-                <img src="/images/Icon.webp" alt="weather icon" class="w-icon">
-                <div class="temp">Day - 55&#176 F</div>
-                <div class="temp">Night - 32&#176 F</div>
+                <div class="day"></div>
+                <img src="" alt="weather icon" class="w-icon">
+                <div class="temp">Day - ??#176 F</div>
+                <div class="temp">Night - ??&#176 F</div>
             </div>
 
             <div class="weather-forecast-item">
-                <div class="day">Tuesday</div>
-                <img src="/images/Icon.webp" alt="weather icon" class="w-icon">
-                <div class="temp">Day - 55&#176 F</div>
-                <div class="temp">Night - 32&#176 F</div>
+                <div class="day"></div>
+                <img src="" alt="weather icon" class="w-icon">
+                <div class="temp">Day - ??#176 F</div>
+                <div class="temp">Night - ??&#176 F</div>
             </div>
 
             <div class="weather-forecast-item">
-                <div class="day">Wednesday</div>
-                <img src="/images/Icon.webp" alt="weather icon" class="w-icon">
-                <div class="temp">Day - 55&#176 F</div>
-                <div class="temp">Night - 32&#176 F</div>
+                <div class="day"></div>
+                <img src="" alt="weather icon" class="w-icon">
+                <div class="temp">Day - ??#176 F</div>
+                <div class="temp">Night - ??&#176 F</div>
             </div>
 
             <div class="weather-forecast-item">
-                <div class="day">Thursday</div>
-                <img src="/images/Icon.webp" alt="weather icon" class="w-icon">
-                <div class="temp">Day - 55&#176 F</div>
-                <div class="temp">Night - 32&#176 F</div>
+                <div class="day"></div>
+                <img src="" alt="weather icon" class="w-icon">
+                <div class="temp">Day - ??#176 F</div>
+                <div class="temp">Night - ??&#176 F</div>
             </div>
 
             <div class="weather-forecast-item">
-                <div class="day">Friday</div>
-                <img src="/images/Icon.webp" alt="weather icon" class="w-icon">
-                <div class="temp">Day - 55&#176 F</div>
-                <div class="temp">Night - 32&#176 F</div>
+                <div class="day"></div>
+                <img src="" alt="weather icon" class="w-icon">
+                <div class="temp">Day - ??#176 F</div>
+                <div class="temp">Night - ??&#176 F</div>
             </div>
 
             <div class="weather-forecast-item">
-                <div class="day">Saturday</div>
-                <img src="/images/Icon.webp" alt="weather icon" class="w-icon">
-                <div class="temp">Day - 55&#176 F</div>
-                <div class="temp">Night - 32&#176 F</div>
+                <div class="day"></div>
+                <img src="" alt="weather icon" class="w-icon">
+                <div class="temp">Day - ??#176 F</div>
+                <div class="temp">Night - ??&#176 F</div>
             </div>
 
         </div>
 
     </div>
-
-
+    
+    <script src="https://cdn.jsdelivr.net/npm/moment@2.30.1/moment.min.js"></script>
     <script src="/components/weather.js"></script>
 </body>
 </html>
