--- a/components/notes.css
+++ b/components/notes.css
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: start;
+    justify-content: center;
     font-size: 50px;
     font-weight: 100;
     margin: 10px;
@@ -28,7 +28,8 @@
     cursor: pointer;
     font-weight: 100;
     width: 15%;
-    margin-left: 10px;
+    margin-left: 20px;
+    margin-top: 10px;
 }
 
 .note-list {
@@ -39,12 +40,19 @@
     border: 1px solid whitesmoke;
     padding: 20px;
     width: 100%;
+    height: 80vh;
     font-weight: 100;
+    list-style-type: none;
+}
+
+.note-list ul { 
+    list-style-type: none;
 }
 
 .note-list :hover { 
     cursor: pointer;
 }
+
 
 .list-item {
     border-radius: 10px;
@@ -77,7 +85,7 @@
     left: 0;
     right: 0;
     height: 85%;
-    /*visibility: hidden; */
+    visibility: hidden; /* */
 }
 
 #note-editor { 
@@ -93,12 +101,14 @@
     font-size: 30px;
 }
 
-#exit-btn {
-    border: #ccc;
+.exit-btn {
+    border: none;
     position: absolute;
-    top: 5%;
-    right: 0;
+    top: 7%;
+    right: 4%;
     cursor: pointer;
+    background: none;
+    color: whitesmoke;
 }
 
 #edit-container { 
