--- a/components/notes.html
+++ b/components/notes.html
@@ -6,8 +6,8 @@
     <title>Note App</title>
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="/components/notes.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
-
 <body>
     <div class="container">
         <button class="exit-btn">X</button>
@@ -16,35 +16,27 @@
             <button id="new-note-button">New Note</button>
             <button id="menu-button">Menu</button>
         </div>
-
-            <div class="note-list" id="note-list">
-                <div class="active-folder" id="active-folder-name">Folder Name</div>
-                <div class="list-items">
-                    <ul>
-                        <li><div class="list-item">Note Name</div></li>
-                        <li><div class="list-item">Note Name</div></li>
-                        <li><div class="list-item">Note Name</div></li>
-                        <li><div class="list-item">Note Name</div></li>
-                        <li><div class="list-item">Note Name</div></li>
-                        <li><div class="list-item">Note Name</div></li>
-                    </ul>
-                </div>
-            </div>
-
-        </div>
-
-        <div class="note-view hidden" id="note-view">
-
-            <div class="view-container">
-                <div class="note-title" id="note-title">Note Title <button class="exit-btn" id="exit-edit-button">X</button></div>
-                <button id="save-note-button">Save</button>
-                <button id="clear-note-button">Delete</button>
-            </div>
-
-            <div class="view-container" id="edit-container">
-                <textarea name="" id="note-editor" placeholder="Notes..."></textarea>
+        <div class="note-list" id="note-list">
+            <div class="list-items">
+                <ul id="list-item"></ul>
             </div>
         </div>
+    </div>
+
+    <div class="overlay hidden" id="overlay"></div>
+
+    <div class="note-view hidden" id="note-view">
+        <div class="view-container">
+            <div class="note-title-container">
+                <input type="text" id="note-title-input" placeholder="Note Title" />
+                <button class="exit-btn" id="exit-edit-button">X</button>
+            </div>
+            <button id="save-note-button">Save</button>
+        </div>
+        <div class="view-container" id="edit-container">
+            <textarea id="note-editor" placeholder="Notes..."></textarea>
+        </div>
+    </div>
 
     <script src="/components/notes.js"></script>
 </body>
