--- a/components/snake-game.css
+++ b/components/snake-game.css
@@ -8,8 +8,9 @@ body {
 }
 
 .title {
-    font-size: 2em;
+    font-size: 50px;
     margin-bottom: 20px;
+    font-weight: 100;
 }
 
 .start-menu {
