--- a/components/stop-watch.html
+++ b/components/stop-watch.html
@@ -11,7 +11,7 @@
 
     <div id="clock">
         <div id="time">12:00</div>
-        <div id="location">Denver, Colorado</div>
+        <div id="location">Location Loading</div>
     </div>
 
     <div id="timer-container">
