--- a/components/stop-watch.html
+++ b/components/stop-watch.html
@@ -14,23 +14,40 @@
         <div id="location">Location Loading</div>
     </div>
 
+    <div id="alarm-clock">
+        <div id="alarm-title">Alarms<button id="new-alarm-button">New Alarm</button></div>
+        <div class="alarm-list">
+
+            <ul id="alarm-list-item">
+                <li>7:00AM</li>
+                <div class="alarm-buttons">
+                    <button>edit icon</button>
+                    <button>delete icon</button>
+                    <button>on/off slider?</button>
+                </div>
+
+                <li>7:15AM</li>
+                <div class="alarm-buttons">
+                    <button>edit icon</button>
+                    <button>delete icon</button>
+                    <button>on/off slider?</button>
+                </div>
+                <li>7:30AM</li>
+                <div class="alarm-buttons">
+                    <button>edit icon</button>
+                    <button>delete icon</button>
+                    <button>on/off slider?</button>
+                </div>
+            </ul>
+        </div>
+    </div>
+
     <div id="timer-container">
-        Timer
+        <div id="timer-title">Timer</div>
         <div id="timer">00:00:00</div>
         <button id="stop-button">Stop</button>
         <button id="start-button">Start</button>
         <button id="reset-button">Reset</button>
-    </div>
-
-    <div id="alarm-clock">
-        <div id="alarm-title">Alarm Clock</div>
-        <div class="alarm-list">
-            <ul id="alarm-list-item">
-                <li>7:00AM</li>
-                <li>7:15AM</li>
-                <li>7:30AM</li>
-            </ul>
-        </div>
     </div>
 
     <script src="./stop-watch.js"></script>
