Fixed clock issues - caused by duplicate variable names

--- a/components/stop-watch.html
+++ b/components/stop-watch.html
@@ -14,15 +14,14 @@
         <div id="location">Location Loading</div>
         <button id="alarm-tab">Alarm</button>        
         <button id="stopwatch-tab">Stop Watch</button>
-        <button id="timer-tab">Timer</button>   
-
+        <button id="timer-tab">Timer</button>
     </div>
 
     <div class="hidden" id="alarm-clock">
         <div id="alarm-container">
             <div id="alarm-title">
                 Alarms
-                <button id="new-alarm">Plus Icon</button>
+                <button id="new-alarm">New</button>
             </div>
 
             <div id="alarm-settings" class="hidden">
