--- a/components/stop-watch.html
+++ b/components/stop-watch.html
@@ -61,7 +61,7 @@
         <button id="reset-button">Reset</button>
     </div>
 
-    <div id="timer-container">
+    <div id="timer-container" class="hidden">
         <div id="timer-title">Timer</div>
         <div id="time-picker" class="hidden">
             <input type="number" id="hours" placeholder="H" min="0" max="99" step="1">
