Finished contacts layout and functionality

--- a/components/calendar.html
+++ b/components/calendar.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Calendar App</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="./calendar.css">
 </head>
 <body>
     <div id="calendar">
+        <div class="title">Calendar</div>
         <div id="month">
             <button id="prev">&#10094;</button>
             <span id="month-year"></span>
@@ -24,6 +26,6 @@
         </div>
         <div id="days"></div>
     </div>
-    <script src="script.js"></script>
+    <script src="./calendar.js"></script>
 </body>
 </html>
