--- a/components/calendar.html
+++ b/components/calendar.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./calendar.css">
 </head>
 <body>
+    <div class="app-logo"><img id="home" src="/images/JSFS-Logo.png" onclick="openIndexPage()" alt=""></div>
     <div id="calendar">
         <div class="title">Calendar</div>
         <div id="month">
