--- a/components/currency-converter.html
+++ b/components/currency-converter.html
@@ -8,6 +8,8 @@
     <title>Currency Converter</title>
 </head>
 <body>
+
+    <div class="app-logo"><img id="home" src="/images/JSFS-Logo.png" onclick="openIndexPage()" alt=""></div>
     
     <div id="title">Currency Converter</div>
 
