--- a/components/snake-game.html
+++ b/components/snake-game.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./snake-game.css">
 </head>
 <body>
-    
+    <div class="app-logo"><img id="home" src="/images/JSFS-Logo.png" onclick="openIndexPage()" alt=""></div>
     <div class="title">
         Snake Game
     </div>
