--- a/components/stop-watch.html
+++ b/components/stop-watch.html
@@ -8,7 +8,7 @@
     <title>Stop-Watch Alarm Clock</title>
 </head>
 <body>
-
+    <div class="app-logo"><img id="home" src="/images/JSFS-Logo.png" onclick="openIndexPage()" alt=""></div> 
     <div id="clock">
         <div id="time">12:00</div>
         <div id="location">Location Loading</div>
