--- a/components/calculator.html
+++ b/components/calculator.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-	
+	<div class="app-logo"><img id="home" src="/images/JSFS-Logo.png" onclick="openIndexPage()" alt=""></div>
 	<div class="app">
-
+		
 		<div class="calculator">
 
 			<div class="display">
