--- a/components/contacts.html
+++ b/components/contacts.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacts App</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="./contacts.css">
 </head>
 <body>
+    <div class="app-logo"><img id="home" src="/images/JSFS-Logo.png" onclick="openIndexPage()" alt=""></div>
     <div id="app">
         <div class="title">Contacts</div>
         <div id="contact-form">
