--- a/components/notes.html
+++ b/components/notes.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
+    <div class="app-logo"><img id="home" src="/images/JSFS-Logo.png" onclick="openIndexPage()" alt=""></div>
     <div class="container">
-        <button class="exit-btn">X</button>
         <div class="title">
             Notes
             <button id="new-note-button">New Note</button>
