--- a/components/to-do.html
+++ b/components/to-do.html
@@ -8,6 +8,7 @@
     <title>To Do List</title>
 </head>
 <body>
+    <div class="app-logo"><img id="home" src="/images/JSFS-Logo.png" onclick="openIndexPage()" alt=""></div>
     <div id="title">To Do List</div>
 
     <div class="list-container">
