--- a/components/weather.html
+++ b/components/weather.html
@@ -8,6 +8,7 @@
     <title>Weather</title>
 </head>
 <body>
+    <div class="app-logo"><img id="home" src="/images/JSFS-Logo.png" onclick="openIndexPage()" alt=""></div>
     <div class="container">
         <div class="current-info">
             
