--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,14 @@
     margin: 0;
 }
 
+#home { 
+  max-width: 100px;
+  width: 100%;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
     background-color: black;
